tests/ui/traits/fully-qualified-syntax-cast.stderr
error[E0404]: expected trait, found builtin type `str`
  --> $DIR/fully-qualified-syntax-cast.rs:10:18
   |
LL |         <Self as str>::trim(self);
   |                  ^^^ not a trait

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0404`.
